Add: 프로젝트 전체 조회 추가
